# Standard_PyOxidizer

./: Cargo.toml  README.md  pyproject.toml
scripts/: Standard_PyOxidizer.pyi  abs_test.py  classtest.py  test.py
scripts/Standard_PyOxidizer/: __init__.py
src/: abs.rs  ascii.rs  bytearray.rs  impls.rs  lib.rs  number_system.rs
