[package]
name = "Standard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Standard_PyOxidizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
num-complex = "0.3.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
